--- a/templates/management/product.html
+++ b/templates/management/product.html
@@ -19,42 +19,198 @@ $(document).ready(function() {
    </script>
 {% endblock extra_head %}
 
+{% load breadcrumbs %}
+{% block breadcrumbs %}
+    <ul class="breadcrumb">
+    <!-- <li><a href="{% url "home" %}">Home</a></li> -->
+    {% breadcrumb_url product.title.client "client-detail" product.title.client.id %}
+    {% breadcrumb_url product.title "title-detail" product.title.id %}
+    </ul>  
+{% endblock %}
+
+
 {% block content %}
+
+
 <h2>{{ product.full_name }}</h2>
-<b>Job number:</b> {{ product.title.job_number }}
-<h4><a href="{{ product.title.client.get_absolute_url }}">{{ product.title.client }}</a></h4>
-<p><b>Type:</b> {{ product.product_type }}</p>
-<p><b>Cat number:</b> {{ product.cat_number }}</p>
-<p><b>Due Date:</b> {{ product.due_date }}</p>
-<p><b>Status:</b> {{ product.status }}</p>
-<p><a href="{% url "product-edit" product_id=product.id %}">edit</a></p>
 
-<h4>ASSETS</h4>
-
-{% if product.asset_set.all %}
-    <table class="table table-striped table-condensed tablesorter" id="sortTable">
-    <thead>
-    <tr>
-    	<th>Name</th>
-    	<th>Type</th>
-    	<th>Status</th>
-    	<th></th>
-    </tr>
-	</thead>
-	<tbody>
-    {% for asset in product.asset_set.all %}
-    <tr>
-        <td><a href="{% url "asset-detail" product_id=product.id asset_id=asset.id %}">{{ asset.name }}</a></td>
-        <td>{{ asset.asset_type }}</td>
-        <td>{{ asset.status }}</td>
-        <td><a href="{% url "asset-edit" product_id=product.id asset_id=asset.id %}">edit</a></td>
-    </tr>
-	{% endfor %}
-	</tbody>
+<table class="headingtable">
+<tr>
+    <td><h3>ASSETS</h3></td>
+    <td><div class='text-right'><a class="btn btn-primary" href="{% url "asset-new" product_id=product.id %}">Create new asset</a></div></td>
+</tr>
 </table>
+{% if product.asset_set.all %}
+
+    {% for asset in product.asset_set.all %}
+    <table class="table table-bordered table-condensed">
+        <tr>
+            <td class="span4"><h5><a href="{% url "asset-detail" product_id=product.id asset_id=asset.id %}">{{ asset.name }}</a></h5></td>
+            <td class="span3">{{ asset.asset_type }}</td>
+            <td class="span2 {{ asset.status.color }}"><div class='text-center'>{{ asset.status }}</div></td>
+        </tr>        
+        <tr>
+            <td colspan="3"><strong>LATEST ACTIVITY:</strong>
+
+
+{% if asset.assetreport_set.latest %}
+  {% with asset.getParentReports.latest as assetreport %}
+
+
+<a name="{{assetreport.id}}"/></a>
+    <div id="{{assetreport.id}}">
+    <table class="table table-bordered table-condensed reporttable-main">
+    <tr>
+        <td class="span3"><h4>{{ assetreport.status }}</h4></td>
+        <td class="span2"><div class="text-center">{{ assetreport.getSubmittedText }}</div></td>
+        <td class="span3"><div class="text-right">{{ assetreport.date_updated }}</div>
+            <div class="text-right"><b>Created by:</b> {{ assetreport.full_created_by }}</div></td>
+    </tr>
+
+    {% if assetreport.isQARequest %}
+    <tr>
+        <td>QA Disc #{{ assetreport.disc_number|stringformat:"04d" }}</td>
+        <td>Work Order #{{ assetreport.work_order }}</td>
+        <td><div class="text-right"><!-- {% if assetreport.response_to %}
+                Response to: {{ assetreport.response_to }}
+            {% endif %} -->
+            {% if assetreport.isEditable %}
+            <a href="{% url "report-edit" product_id=asset.product.id asset_id=asset.id report_id=assetreport.id %}?type=test" class="btn btn-primary btn-small">edit / submit for testing</a>
+            {% endif %}
+        </div>
+        </td>
+    </tr>
+    {% endif %}
+    
+    <tr>
+        <td colspan="3">
+
+
+        <p><b>Submitted by:</b> {{ assetreport.full_submitted_by }} ({{ assetreport.submitted_by.username }})</p>
+        <p><b>Notes:</b>
+        {{ assetreport.contents }}
+
+
+    </tr>
+    {% if assetreport.getChildren %}
+    <tr>
+        <td colspan="3">
+
+        {% for childreport in assetreport.getChildren %}
+        <a name="{{childreport.id}}"/></a>
+        <div id="{{childreport.id}}">
+            <table class="table table-bordered table-condensed reporttable-{{ childreport.getReportCSS }}">
+            <tr>
+                <td class="span3"><h4>{{ childreport.status }}</h4></td>
+                <td class="span2"><div class="text-center reporttext-{{ childreport.getReportCSS }}">{{ childreport.getReportStatus }}</div></td>
+                <td class="span3"><div class="text-right">{{ childreport.date_updated }}</div>
+                    <div class="text-right">{% if childreport.full_created_by %}<b>Created by:</b> {{ childreport.full_created_by }}{% endif %}</div></td>
+            </tr>
+            </tr>
+
+
+            <tr>
+                <td colspan="3">
+                    {% for item in childreport.reportItems %}
+                        <table class="table qa-table-bordered table-condensed">
+
+                            <tr>
+                                <td colspan="3" class="qa_item">QA ITEM:</td>
+                            </tr>
+                        <tr>
+                            <td class="span2">{{ item.cer_user }}</td>
+                            <td class="span3">{{ item.date_created }}</td>
+                            <td class="span2"><div class="text-center"><span class="label label-{{ item.severity.color }}">{{ item.severity }}</span></div></td>
+                        </tr>
+                        <tr>                
+                            <td colspan="3">                                
+                                {{ item.comment|linebreaks }}</td>
+                        </tr>
+
+
+                        <tr>
+                            <td colspan="3" class="author_response">AUTHOR RESPONSE:</td>
+                        </tr>
+                        {% if item.response_comment %}
+                        <tr>
+                            <td class="span2">{{ item.response_user.first_name }} {{ item.response_user.last_name }}</td>
+                            <td class="span3">{{ item.response_date }}</td>
+                            <td class="span2"><div class="text-center"><span class="label label-{{ item.response_status.color }}">{{ item.response_status }}</span></div></td>
+                        </tr>
+
+                        <tr>
+
+                            <td colspan="3">{{ item.response_comment }}</td>
+                        <tr>
+                        {% else %}
+                        <tr>
+                            <td colspan="3" class="important">No authoring response</td>
+                        </tr>
+                        {% endif %}
+   
+
+                        </table>
+                    {% endfor %}
+
+                    {% if forloop.last %}
+                        {% if childreport.completed = False %}
+                        <tr>
+                            <td colspan="3">
+                            <div class="text-right">
+                        {% for actionbutton in childreport.status.actionbutton_set.all  %}  
+                            {% if actionbutton.action  %}
+                                    <a href="{% url actionbutton.action report_id=childreport.id %}" class="btn btn-small {% if actionbutton.color %}btn-{{actionbutton.color}}{% endif %}">
+                                        {{ actionbutton }}      
+                                    </a>
+                            {% endif %}                            
+                        {% endfor %}
+                            </div>
+                            </td>
+                        </tr>
+                       {% endif %}    
+                  {% endif %}
+
+                </table>
+
+                 </td>
+            </tr>
+
+        {% endfor %}
+        </td>
+    </tr>    
+
+    {% endif %}
+
+
+    </table>
+    </div>
+    {% endwith %}
+
+                {% else %}
+                Nothing
+
+                {% endif %}
+            </td>
+        </tr>        
+    </table>
+    {% endfor %}
+
 {% else %}
     <p>No assets created.</p>
 {% endif %}
-<a href="{% url "asset-new" product_id=product.id %}">Create new assets</a>
 
+{% endblock %}
+
+{% block side_bar %}
+<div class="headerbox">
+    <h2><small>{{ product.title }}</small></h2>
+</div>
+<div class="rectanglebox">
+    <p><b>Job number:</b> {{ product.title.job_number }}</p>
+    <p><b>Type:</b> {{ product.product_type }}</p>
+    <p><b>Cat number:</b> {{ product.cat_number }}</p>
+    <p><b>Due Date:</b> {{ product.due_date }}</p>
+    <p><b>Status:</b> {{ product.status }}</p>
+    <p><a class="btn btn-small" href="{% url "product-edit" product_id=product.id %}">Edit product details</a></p>
+</div>
 {% endblock %}
